:art: Style: Ajustar design do botão, padding das páginas e e destino do ContentTemplate no AppShell.

--- a/HTTPClient/HTTPClient/AppShell.xaml
+++ b/HTTPClient/HTTPClient/AppShell.xaml
@@ -14,7 +14,7 @@
         Route="PostView" />
         <ShellContent
         Title="Criar postagens"
-        ContentTemplate="{DataTemplate local:PostView}"
+        ContentTemplate="{DataTemplate local:CreatePostView}"
         Route="CreatePostView" />
     </TabBar>
 
